# Episode-Curator-ReAct

./: .gitignore  CLAUDE.md  QUICKSTART.md  cli.py  cli_app.py  episode_curator.py  hook_manager.py  mcp_client.py  pyproject.toml  react_agent.py  skill_loader.py  system_tools.py  tool_registry.py  web_app.py
skills/data-analysis/: SKILL.md
tests/: conftest.py  fake_mcp_server.py  test_cli_tui.py  test_context_fixes.py  test_context_panel_redesign.py  test_curator.py  test_e2e.py  test_episode_store.py  test_hook_manager.py  test_integration.py  test_load_unload_visibility.py  test_mcp_client.py  test_model_context_config.py  test_observability.py  test_plugin.py  test_plugin_system.py  test_react_loop.py  test_select_copy.py  test_skill_loader.py  test_system_tools.py  test_system_tools_extended.py  test_temporal_decay.py  test_tool_registry.py  test_tool_tokens_and_skill_injection.py  test_tui_e2e.py  test_ui_enhancements.py
tests/fixtures/skills/commit/: SKILL.md
tests/fixtures/skills/empty/: SKILL.md
tests/fixtures/skills/review-pr/: SKILL.md
