[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["react_agent", "episode_curator", "web_app", "cli_app",
              "system_tools", "hook_manager", "mcp_client", "skill_loader",
              "tool_registry"]

[project]
name = "episode-curator-react"
version = "0.1.0"
description = "ReAct Agent with intelligent context management via Episode Curator"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
]

[project.optional-dependencies]
tui = [
    "textual>=0.50",
]
dev = [
    "pytest",
    "pytest-playwright",
    "playwright",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "llm: tests that require real Anthropic API calls",
    "e2e: end-to-end Playwright browser tests",
    "tui: TUI (Textual) CLI interface tests",
]
asyncio_mode = "auto"
